--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "author": {
     "name": "Sidddharth Pandey"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Sidd27/sv-bootstrap-modal"
+},
   "version": "1.0.0",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -11,6 +15,9 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w"
+  },
+  "peerDependencies": {
+    "bootstrap": "4.5.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^12.0.0",
